#151 fix placeholder on small screens

--- a/app/scss/pages/_url-form.scss
+++ b/app/scss/pages/_url-form.scss
@@ -35,6 +35,12 @@
   @include content-container(#fff, #000);
   padding: 0;
   ul li {
-    margin: 0.25rem 0
+    margin: 0.25rem 0;
+    color:$dark-cobalt;
   }
+}
+.url-report{
+  font-family: $text-font;
+  font-size: 1.1rem;
+  color: $dark-cobalt;
 }
